# xiyan_mcp_server

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/mcp_client/: README.md  dockerfile  dockerfile_1_1  mcp_client_app.py  pyproject.toml  requirements.txt  resource_result.txt  t.py
src/mcp_client/badkup/: mcp_docker_client.py  resource_result.txt  t_client.py  t_dp.py
src/mcp_client/src/: t.py
src/xiyan_llm/: README.md  dockerfile  pyproject.toml
src/xiyan_llm/src/: .env  api.py  client_example.py  main.py
src/xiyan_llm/src/local_model/: d_model.py  load_model.py  local_xiyan_server.py  vllm_demo_README.md  xiyan_vllm_chat_demo.py  xiyan_vllm_demo.py  xiyan_vllm_simple_demo.py
src/xiyan_mcp_server/: __main__.py  config.yml  dockerfile_1_1  dockerfile_1_2  pyproject.toml  server.py
src/xiyan_mcp_server/src/: README.md  config.yml  config_demo.yml  main.py  server.py
src/xiyan_mcp_server/src/local_model/: d_model.py  local_xiyan_server.py
src/xiyan_mcp_server/src/utils/: db_config.py  db_mschema.py  db_source.py  db_util.py
src/xiyan_mcp_server/utils/: db_source.py  file_util.py  llm_util.py
